[package]
name = "instagen"
version = "0.1.0"
authors = ["Giorgio Pomettini <giorgio.pomettini@gmail.com>"]
edition = "2018"
description = "Library and cli app to generate hashtags for Instagram"
keywords = ["instagram", "hashtag", "socialmedia", "generator", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/Pomettini/instagen"
readme = "readme.md"

[dependencies]
clap = ">=2.33"
reqwest = ">=0.9.18"
serde = ">=1.0.97"
assert_cmd = ">=0.11.1"